# ocean

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  get-coverage.sh  get-loc.sh  profile.sh  run.sh  rustfmt.toml
old-code/: lib.rs  (+4 more)
src/: CMakeLists.txt  ast.cpp  ast.hpp  compiler.rs  helper.hpp  hydro.rs  lex.yy.cpp  lib.rs  main.cpp  main.rs  ocean.l  ocean.rs  ocean.y  symboltable.cpp  symboltable.hpp  tests.rs  token.hpp  type_helper.hpp  typechecker.cpp  util.rs
src/compiler/: errors.rs  lexer.rs  macros.rs  mod.rs  parser.rs  passes.rs
src/compiler/hydro/: instruction.rs  lexer.rs  mod.rs  parser.rs  typechecker.rs
src/compiler/macros/: mod.rs
src/compiler/parser/: ast.rs  display.rs  helpers.rs  mod.rs  span.rs
src/compiler/semantic_analysis/: loop_checker.rs  mod.rs  operators.rs  symboltable.rs  type_checker.rs
src/hydro/: analyzer.rs  binaryable.rs  compilationunit.rs  debugcontext.rs  debuggable.rs  exception.rs  executable.rs  executioncontext.rs  frontend.rs  function.rs  instruction.rs  intrinsic.rs  layouttemplate.rs  lexer.rs  module.rs  parser.rs  pipeline.rs  span.rs  symboltable.rs  typechecker.rs  value.rs  visualizer.rs
src/hydro/analyzer/: analysiscontext.rs  analysisgraph.rs  analyze.rs  mod.rs  possiblevalue.rs
src/hydro/frontend/: binaryable.rs  compiler.rs  parser.rs  token.rs  tokentype.rs
src/hydro/intrinsic/: intrinsicmanager.rs  mod.rs
src/hydro/visualizer/: mod.rs  moduledependencyvisualization.rs
src/ocean/: frontend.rs  passes.rs
src/ocean/frontend/: annotation.rs  annotationparser.rs  ast.rs  astsymbolstack.rs  compilationunit.rs  compiler.rs  lexer.rs  mod.rs  parser.rs  parserphase1.rs  parserphase2.rs  parsestatestack.rs  precedencetable.rs  semanticanalysis.rs  span.rs  symboltable.rs  tokentype.rs
src/ocean/semantic_analysis/: loop_checker.rs  symboltable.rs  type_checker.rs
src/tests/: hydro.rs
src/tests/hydro/: analyzer.rs  frontend.rs  module_execute_tests.rs
src/util/: argsparser.rs  cli_args.rs  debug_args.rs  dependencygraph.rs  doublemap.rs  errors.rs  hashablemap.rs  metrictracker.rs  mod.rs  possiblevaluerange.rs  span.rs  string_map.rs  testing.rs  token.rs  tokentrait.rs
(+142 files in other folders)
