[package]
name = "ocean"
version = "0.1.0"
edition = "2021"
exclude = ["./ocean-language-support/*"]

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.6.6"
itertools = "0.11.0"
lazy_static = "1.4.0"
ocean-macros = { path = "ocean-macros" }
rustyline = "12.0.0"
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
which = "5.0.0"
